--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wibbitz",
-  "version": "0.0.1",
+  "name": "s-saqhan-v1",
+  "version": "0.0.7",
   "description": "Stencil Component Starter",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
